# decco

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  bsconfig.json  package.json  postinstall.js  ppx  ppx.cmd  rescript.json
.github/workflows/: ppx-pr.yaml  ppx-push.yaml
__tests__/: test.re
ppx/: Codecs.re  Ppx_decco.re  Records.re  Signature.re  Structure.re  Tuple.re  Utils.re  Variants.re  dune  jbuild  package.json  ppx_decco.sh
ppx/esy.lock/: index.json
ppx_src/: .ocamlformat  package.json  ppx_decco.opam
ppx_src/esy.lock/: index.json
ppx_src/src/: BatOption.ml  BatOption.re  Codecs.ml  Codecs.re  DecodeCases.ml  DecodeCases.re  Polyvariants.ml  Polyvariants.re  Ppx_decco.ml  Records.ml  Signature.ml  Signature.re  Structure.ml  Structure.re  Tuple.ml  Tuple.re  Utils.ml  Utils.re  Variants.ml  Variants.re  dune
src/: Codecs.re  Decco.re  Decco.res  Decco_Codecs.re  Decco_Codecs.res  Decco_types.res
test/: TestUtils.re  TestUtils.res
test/__tests__/: Array.res  BeltResult.res  Bool.res  CustomCodecs.res  Default.res  DictInt.res  Falseable.res  Float.res  Foo.res  Int.res  JsJson.res  Key.res  Ldot.res  List.res  LongPath.res  Magic.res  OpenBelt.re  OpenBelt.res  Option.res  OptionList.res  Polyvariant.res  Record.res  RecordSpreads.res  Recursion.re  Recursion.res  SimpleVar.res  String.res  TestModVarType.res  Tuple.res  Unboxed.re  Unboxed.res  UnboxedDebug.res  Unit.res  Variant.res  test.re  test.res
test/compiler_only_tests/: ParameterizedRecords.res  ReadMe.md
test/functors/: DecOnlyFunctor.res  (+2 more)
