opam-version: "2.0"
name: "decco-ppx"
version: "1.0.0"
synopsis: "PPX for generating encoders and decoders from Rescript types"
description: """
PPX for generating encoders and decoders from Rescript types
"""
maintainer: "Day One Team <ops@dayoneapp.com>"
authors: "Ryan Biwer, Murphy Randle, and others?"
license: "MIT"
homepage: "https://github.com/reasonml-labs/decco"
bug-reports: "https://github.com/reasonml-labs/decco/issues"
dev-repo: "git+https://github.com/reasonml-labs/decco.git"
depends: [
  "ocaml" { = "4.12.1"}
  "dune" { >= "2.7"}
  "ppxlib" { = "0.26.0"}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
